# Turtlebot3_niryo

./: README.md
ned_applications/examples/Control_Ned_Mouse/: robot_ned.py
ned_ros/niryo_robot_bringup/launch/: desktop_gazebo_simulation.launch
tur_niryo_manipulator/: CMakeLists.txt  package.xml  setup.py
tur_niryo_manipulator/launch/: one_robot.launch  turtlebot3_niryo_empty_world.launch  turtlebot3_teleop.launch
tur_niryo_manipulator/nodes/: interface_cool.py  pose_control  pose_control (copie)  test.py
tur_niryo_manipulator/rviz/: default.rviz
